data/derived/comb/progs/unify/prog4270.ml.out
Characters 26-52:
  let sampleExpr2=Times(Squa(VarX,Nom(VarX,VarY,VarX)),Sine(Varx));;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
